fixed hr wrapping
fixed hr wrapping on small screens by adding a margin of 70px to all hr's at 768px

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -255,4 +255,7 @@ footer {
   .background-image {
     margin: 60px auto;
   }
+  hr {
+    margin: 70px auto;
+  }
 }
